--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\mrube\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\Ruben\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\flutter
 flutter.versionName=1.0.0
 flutter.versionCode=1
